# UserAssistedSphereMeshEditor

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Core/: Camera.hpp  CollapsableEdge.hpp  EdgeCollapse.hpp  HashDefinitions.hpp  ObjLoader.hpp  Quadric.hpp  Quadric2.hpp  Quadric3.hpp  Region.hpp  RenderableMesh.hpp  RenderableSphere.hpp  ScopeTimer.hpp  Sphere.hpp  SphereMesh.hpp  TemporalValidityQueue.hpp  TimedSphere.hpp  TriMesh.hpp  UpdatableFibonacciPQ.hpp  UpdatablePQ.hpp  Window.hpp  YAMLUtils.hpp
Core/src/: Camera.cpp  CollapsableEdge.cpp  EdgeCollapse.cpp  ObjLoader.cpp  Quadric.cpp  Quadric2.cpp  Quadric3.cpp  Region.cpp  RenderableMesh.cpp  ScopeTimer.cpp  Sphere.cpp  SphereMesh.cpp  TemporalValidityQueue.cpp  TimedSphere.cpp  TriMesh.cpp  UpdatableFibonacciPQ.cpp  UpdatablePQ.cpp  Window.cpp
Math/: Math.hpp  Scalar.hpp
Math/Matrix/: Matrix2.hpp  Matrix3.hpp  Matrix4.hpp
Math/Matrix/src/: Matrix2.cpp  Matrix3.cpp  Matrix4.cpp
Math/Point/: Point2.hpp  Point3.hpp  Point4.hpp
Math/Point/src/: Point2.cpp  Point3.cpp  Point4.cpp
Math/Rotation/: Quaternion.hpp
Math/Rotation/src/: Quaternion.cpp
Math/Vector/: Vector2.hpp  Vector3.hpp  Vector4.hpp
Math/Vector/src/: Vector2.cpp  Vector3.cpp  Vector4.cpp
Math/Versor/: Versor2.hpp  Versor3.hpp  Versor4.hpp
Math/Versor/src/: Versor2.cpp  Versor3.cpp  Versor4.cpp
Shader/: Shader.hpp
Shader/GLSL/: fragment.frag  impostor.frag  impostor.vert  sphere.frag  sphere.vert  vertex.vert
Shader/src/: Shader.cpp
include/: fiboqueue.h  glad.c
include/glad/: glad.h
include/igl/: principal_curvature.cpp
